--- a/src/app/home/home-template/home-template.component.scss
+++ b/src/app/home/home-template/home-template.component.scss
@@ -25,7 +25,7 @@
   }
 
   nz-content {
-    margin: 24px 16px 0;
+    margin: 16px 16px 0;
     overflow: initial;
   }
 
@@ -41,4 +41,12 @@
 
   #breadcrumb{
     padding: 20px 0 0 10px
+  }
+
+  nz-sider{
+    max-width: 250px !important;
+    width: 250px !important;
+  }
+  .right-layout{
+    margin-left: 250px !important;
   }
